# podman-cri

./: Cargo.toml  README.md  build.rs
ai-lab/: README.md
ai-lab/extension/: Containerfile
ai-lab/playground-chat/: Containerfile
extension/: Containerfile  README.md  build-and-push.sh  package-lock.json  package.json  tsconfig.json
extension/src/: extension.js  extension.ts
machine/: Containerfile  README.md  crio.conf
machine/crio.conf.d/: 00-defaults  50-kata-remote
machine/kata/: configuration-remote.toml
machine/systemd/system/: podman-cri.service  podman2.service
openapi/: swagger-latest.yaml
podman-api/: Cargo.toml
podman-api/src/: lib.rs  models.rs  types.rs
proto/: runtime.proto
src/: cri_clients.rs  handlers.rs  main.rs  proxy.rs  unix.rs
src/handlers/: image.rs  images.rs  runtime.rs
