[package]
name = "podman-cri"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["fs", "rt-multi-thread"] }
prost = "0.12.6"
tonic = "0.11.0"
serde_json = "1.0.117"
podman-api = { path = "podman-api" }
tower = "0.4.13"
hyper-util = { version = "0.1.7", features = ["client-legacy"] }
hyperlocal = "0.9.1"
hyper = "1.4.1"
http-body-util = "0.1.2"
chrono = "0.4.38"

[build-dependencies]
tonic-build = "0.11.0"
